# dmp

./: .gitignore  README.md  installer.iss  pyproject.toml
.github/workflows/: release.yml
src/dmp/: __init__.py  __main__.py  main.py
