[project]
name = "dmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesper Halkjær Jensen", email = "jej@battman.energy" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dmp = "dmp:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
