[project]
name = "dmp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jesper Halkjær Jensen", email = "mail@jeshj.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dmp = "dmp:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
